minor fixes on mobile

--- a/src/common-components/common-grid/CommonGrid.css
+++ b/src/common-components/common-grid/CommonGrid.css
@@ -20,7 +20,6 @@
   color: #000000aa;
   font-size: 1rem;
   line-height: 26px;
-  margin-bottom: 10px;
   font-weight: 400;
   max-width: 339px;
   text-align: start;
@@ -101,7 +100,7 @@ div#none {
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 ._features .feature-box__header svg {
