--- a/src/components/reviews/Review.css
+++ b/src/components/reviews/Review.css
@@ -64,7 +64,6 @@
 }
 
 .section-text__desc {
-  margin-top: 22px;
   text-align: left;
   cursor: pointer;
 }
